# vLLM-plugin-manager

./: Dockerfile  Dockerfile.slim  README.md  pyproject.toml
examples/: docker-compose.yaml  plugins.minimal.yaml  plugins.yaml  vllm-plugin.yaml
examples/sample-plugin/: pyproject.toml  vllm-plugin.yaml
examples/sample-plugin/my_plugin/: __init__.py  processor.py
tests/: conftest.py  test_config.py  test_discovery.py  test_installer.py  test_register.py  test_registry.py
vllm_plugin_manager/: __init__.py  config.py  manager.py
vllm_plugin_manager/core/: __init__.py  discovery.py  registry.py
vllm_plugin_manager/sources/: __init__.py  installer.py
