[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-sample-plugin"
version = "0.1.0"
description = "Sample vLLM plugin demonstrating plugin structure"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
]

# Entry points - this is how vLLM discovers your plugin
[project.entry-points."vllm.general_plugins"]
sample_plugin = "my_plugin:register"

[project.entry-points."vllm.logits_processors"]
sample_processor = "my_plugin.processor:SampleLogitsProcessor"
